# StudyAbroadSS17

./: README.md
Compiler/Labs/FirstHaskellProjekt/: FirstHaskellProjekt.cabal
Compiler/Labs/FirstHaskellProjekt/.stack-work/install/x86_64-linux/lts-8.6/8.0.2/doc/: doc-index.html  index.html
Compiler/Labs/FirstHaskellProjekt/.stack-work/install/x86_64-linux/lts-8.6/8.0.2/flag-cache/: FirstHaskellProjekt-0.1.0.0-6IJFBqvnY3DKBUEniOK3H8
Compiler/Labs/FirstHaskellProjekt/.stack-work/install/x86_64-linux/lts-8.6/8.0.2/pkgdb/: FirstHaskellProjekt-0.1.0.0-6IJFBqvnY3DKBUEniOK3H8.conf  package.cache
Compiler/Labs/FirstHaskellProjekt/app/: Main.hs
Compiler/Labs/FirstHaskellProjekt/src/: Lib.hs
Compiler/Labs/JITCompiler/: JITCompiler.cabal  README.md
Compiler/Labs/JITCompiler/.stack-work/install/x86_64-linux/lts-8.16/8.0.2/flag-cache/: mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  parsec-3.1.11-113irVHGgd88sRnywByDNw  text-1.2.2.1-Ji7hMs2U4BkBwavd4taEVR
Compiler/Labs/JITCompiler/src/parser/: Lexer.hs  Syntax.hs
Compiler/Labs/test-blatt-6-a-team/: README.md  output.html  stud.yaml  test.md
Compiler/Labs/test-blatt-6-a-team/.stack-work/install/x86_64-linux/lts-8.13/8.0.2/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  QuickCheck-2.9.2-Jyj4gc4JxkEIgGFLAsGhs9  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  hspec-2.4.3-HBpqzXYRXJ933IT5Hc0L2H  (+9 more)
Compiler/Labs/test-blatt-6-a-team/src/: HTMLGen.hs  Parser.hs  Scanner.hs  Types.hs
Compiler/Labs/test-blatt-6-a-team/test/: HTMLGenSpec.hs  ParserSpec.hs  ScannerSpec.hs
Computer Architecture/RASS17/: matmul-tile.cpp
Secure Network Management/Labs/: MIBII and SNMP Analysis_final.docx
(+13 files in other folders)
